# ColorPal

./: .env.example  .gitignore  README.md  docker-compose.yml
.docs/: ColorPal-产品需求文档.md  ColorPal-前端开发规范.md  ColorPal-团队分工文档.md  ColorPal-技术开发规范文档.md  ColorPal-技术方案文档.md
AutoMap/: .env.example  README.md  docker-compose.yml  start-dev.bat
AutoMap/gateway/: main.py  pyproject.toml  requirements.txt
AutoMap/gateway/app/: config.py
AutoMap/gateway/app/models/: map.py
AutoMap/gateway/app/routers/: map.py
AutoMap/gateway/app/services/: backend_client.py  recommender.py
ChatSpace/: .env.example  GETTING_STARTED.md  README.md
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/Colopal.Api/: Program.cs  appsettings.Development.json  appsettings.json
backend/Colopal.Api/Controllers/: HealthController.cs
backend/app/: config.py  database.py
backend/app/models/: __init__.py  community.py  photo.py  task.py  user.py
backend/app/routers/: agent.py  auth.py  community.py  health.py  photo.py  task.py  user.py
backend/app/schemas/: community.py  task.py  user.py
backend/app/services/: agent_chat.py  ai_analyzer.py  crud_photo.py  crud_task.py  crud_user.py  scorer.py
design/: xiaocai-live2d-implementation-plan.md  xiaocai-live2d-style.md
docs/: ai-prompt-template.md  pet-prompt.txt  pitch-deck.md  poster-content.md  profile-demo.html  spirit-demo.html  团队分工文档.md  技术开发规范文档.md  技术方案文档.md  视觉规范.md  配色方案.md
frontend/: Dockerfile  env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gateway/: main.py  (+1 more)
(+122 files in other folders)
