[tool.poetry]
name = "automap-gateway"
version = "0.1.0"
description = "AutoMap FastAPI Gateway"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
httpx = "^0.27.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
